<resources>
    <string name="app_name">像素岛</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="reply">回复: </string>
    <string name="reply_article">回复</string>
    <string name="author">作者</string>
    <string name="go_page">翻页</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="check_img">图片浏览</string>
    <string name="down_load">下载</string>
    <string name="share">分享</string>
    <string name="cookie">饼干</string>
    <string name="collect">订阅</string>
    <string name="setting">设置</string>
    <string name="add_cookie">添加</string>
    <string name="using">使用中</string>
    <string name="unused">未使用</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="camera">相机</string>
    <string name="photo">相册</string>
    <string name="water_mask">水印</string>
    <string name="delete">删除</string>
    <string name="name">名称</string>
    <string name="email">邮件</string>
    <string name="report">举报</string>
    <string name="my_speech">我的发言</string>
    <string name="visit_history">浏览记录</string>
    <string name="link">引用</string>
    <string name="copy">复制内容</string>
    <string name="shield">屏蔽该串</string>
    <item name="tag_first" type="id"/>
    <item name="tag_second" type="id"/>
    <string name="sure_exit">确认退出？</string>
    <string name="sure_submit">确认提交？</string>
    <string name="sure_clear">确定要清空吗？？</string>
    <item name="img_color" type="id" />
    <item name="img_width" type="id" />
    <item name="img_cleaner" type="id" />
    <item name="img_clear" type="id" />
    <string name="draw">涂鸦</string>
    <string name="save">保存</string>
    <string name="finish">完成</string>
    <string name="background">背景</string>
    <string name="git">git</string>
    <string name="about">关于</string>
    <string name="browser">浏览器</string>
    <string name="copy_url">复制链接</string>
    <string name="log_collect">日志收集</string>
    <string name="cur_version">当前版本</string>
    <string name="upgrade">检测新版本</string>
    <string name="_import">导入</string>
    <string name="No.">>>No.</string>
    <string name="ui_theme">UI风格</string>
    <string name="no_cookie">无</string>
    <string name="dark_mod">黑暗模式</string>
    <string name="auto_dark">自动黑暗</string>
    <string name="auto">自动</string>
    <string-array name="dark_mod_item">
        <item>黑暗</item>
        <item>光明</item>
        <item>自动</item>
    </string-array>
    <string name="collection_id">订阅ID</string>
    <string name="add">添加</string>
    <string name="cookie_mod">混乱饼干</string>
    <string name="cookie_mod_detail">列表页面饼干随机显示，同一串内饼干随机显示，同一饼干显示相同，禁止饼干警察!</string>
    <string name="no_img_mod">无图模式</string>
    <string name="copy_no">复制串号</string>
    <string name="thumb_big_img">缩略大图</string>
    <string name="thumb_big_img_content">浏览大图时候仍然使用缩率图</string>
    <string name="mark_cookie">标记饼干</string>
    <string name="cancel_mark_cookie">取消标记饼干</string>
    <string name="clear_cookie_mark">清除饼干标记</string>
    <string name="my_cookie_color">标记我的饼干</string>
    <string name="my_cookie_color_content">串内标记我的饼干颜色,长按恢复默认</string>
    <string name="shield_page">屏蔽列表</string>
    <string name="shield_page_detail">打开屏蔽列表</string>
    <string name="forum_setting">板块设置</string>
    <string name="forum_setting_detail">调整板块顺序，显示、隐藏板块，修改板块名称</string>
    <string name="hide">隐藏</string>
    <string name="show">显示</string>
    <string name="draft_box">草稿箱</string>
    <string name="draft_box_detail">查看保存的草稿</string>
    <string name="only_po">只看po</string>
    <string name="new_thread">发表新串</string>
    <string name="time_line">时间线</string>
    <string name="donate">打赏</string>
    <string name="official">注册</string>
</resources>