<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="com.yollpoll.nmb.view.activity.SettingActivity" />

        <variable
            name="viewModel"
            type="com.yollpoll.nmb.view.activity.SettingVm" />
    </data>

    <LinearLayout
        android:id="@+id/ll_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSecondaryContainer"
        android:orientation="vertical">

        <include
            android:id="@+id/header_title"
            layout="@layout/include_title"
            bind:title="@{@string/setting}" />

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:skin_tag="setting_item">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/log_collect" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:checked="@{viewModel.openLog}" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="?attr/colorOutline"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:background="?attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/ui_theme" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="?attr/colorOutline"
                app:skin_tag="item_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:background="?attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/dark_mod" />

                <Spinner
                    android:id="@+id/spinner_dark_mod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="0dp"
                    android:gravity="right" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="?attr/colorOutline"
                app:skin_tag="item_line" />

            <RelativeLayout
                android:id="@+id/rl_collection"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:background="?attr/selectableItemBackground"
                android:onClick="changeCollectionId">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/collection_id" />

                <TextView
                    android:id="@+id/tv_collection_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/transparent"
                    android:text="@{viewModel.collectionId}" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="?attr/colorOutline"
                app:skin_tag="item_line" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rl_cookie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/tv_cookie_mod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/cookie_mod"
                    app:layout_constraintBottom_toTopOf="@+id/tv_cookie_mod_detail"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/tv_cookie_mod_detail"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/cookie_mod_detail"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_cookie_mod" />

                <Switch
                    android:id="@+id/switch_cookie_mod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.cookieMod}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="?attr/colorOutline"
                app:skin_tag="item_line" />

            <RelativeLayout
                android:id="@+id/no_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:background="?attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/no_img_mod" />

                <Switch
                    android:id="@+id/switch_no_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:checked="@={viewModel.noImgMod}" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="?attr/colorOutline"
                app:skin_tag="item_line" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/thumb_big_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/thumb_big_img_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/thumb_big_img"
                    app:layout_constraintBottom_toTopOf="@+id/tv_thumb_big_content"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/tv_thumb_big_content"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thumb_big_img_title"
                    android:layout_marginTop="5dp"
                    android:text="@string/thumb_big_img_content"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/thumb_big_img_title" />

                <Switch
                    android:id="@+id/switch_thumb_big_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.thumbBigImg}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="?attr/colorOutline"
                app:skin_tag="item_line" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_my_cookie_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:onClick="changeCookieColor"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/tv_my_cookie_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/my_cookie_color"
                    app:layout_constraintBottom_toTopOf="@+id/tv_my_cookie_content"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/tv_my_cookie_content"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_my_cookie_color"
                    android:layout_marginTop="5dp"
                    android:text="@string/my_cookie_color_content"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_my_cookie_color" />

                <ImageView
                    android:id="@+id/iv_cookie_color"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="?attr/colorOutline"
                app:skin_tag="item_line" />

            <LinearLayout
                android:id="@+id/rl_shield"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="gotoShield"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_shield_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/shield_page" />

                <TextView
                    android:id="@+id/shield_page_content"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/shield_page_detail"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="?attr/colorOutline"
                app:skin_tag="item_line" />

            <LinearLayout
                android:id="@+id/rl_forum_setting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="gotoForumSetting"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_forum_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/forum_setting" />

                <TextView
                    android:id="@+id/tv_forum_setting_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/forum_setting_detail"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="?attr/colorOutline"
                app:skin_tag="item_line" />
        </LinearLayout>

    </LinearLayout>
</layout>