<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="max"
            type="Integer" />

        <variable
            name="cur"
            type="Integer" />
        <variable
            name="selected"
            type="Integer" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="?attr/colorTertiaryContainer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/go_page"
                android:textColor="?attr/colorTertiary"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="?attr/colorOnTertiaryContainer"
                android:max="@{max}"
                android:progress="@{cur-1}"
                android:progressBackgroundTint="?attr/colorOnTertiaryContainer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="@+id/seek_bar"
                app:layout_constraintTop_toBottomOf="@+id/seek_bar">

                <TextView
                    android:id="@+id/tv_current_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{selected+""}'
                    android:textColor="?attr/colorOnTertiaryContainer" />

                <TextView
                    android:id="@+id/tv_all_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{"/"+(max+1)}'
                    android:textColor="?attr/colorOnTertiaryContainer" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="right"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/heightBtn"
                    android:id="@+id/btn_cancel"
                    android:text="@string/cancel" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/heightBtn"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/btn_ok"
                    android:text="@string/sure" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

</layout>