<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="view"
            type="com.yollpoll.nmb.view.activity.AuthorActivity" />

        <variable
            name="viewModel"
            type="com.yollpoll.nmb.view.activity.AuthorVm" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryContainer"
        android:orientation="vertical">

        <include
            android:id="@+id/header_title"
            layout="@layout/include_title"
            bind:title='@{@string/about}' />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    app:skin_tag="setting_item">

                    <LinearLayout
                        android:id="@+id/ll_author"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="vertical"

                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/author" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.author}" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line"
                        android:background="?attr/colorOutline" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.email}" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line"
                        android:background="?attr/colorOutline" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:onClick="@{()->view.gotoGit()}"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/git" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.git}" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line"
                        android:background="?attr/colorOutline" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:onClick="@{()->view.gotoUpgrade()}"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/upgrade" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text='@{@string/cur_version+" : "+viewModel.currentVersion}' />
                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line"
                        app:skin_tag="item_line"
                        android:background="?attr/colorOutline" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tv_introduction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    app:skin_tag="setting_item"
                    android:text="@{viewModel.about}"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</layout>